# Apps

FileBotV2/: CMakeLists.txt  runqml
FileBotV2/qml/: App.qml  Main.qml
FileBotV2/qml/Components/: ErrorPop.qml  Sidebar.qml  SidebarItem.qml
FileBotV2/qml/Pages/: HomePage.qml  JsonToDirPage.qml
FileBotV2/src/: main.cpp
FileOrganizerBot/: CMakeLists.txt
FileOrganizerBot/resources/: resources.qrc
FileOrganizerBot/src/: jsonDirectoryPage.cpp  jsonDirectoryPage.hpp  main.cpp  mainwindow.cpp  mainwindow.h  menuItem.cpp  menuItem.hpp  sidebar.cpp  sidebar.h
FileOrganizerBot/styles/: jsonDirPage.qss  main.qss  sidebar.qss
